syntax = "proto2";
package com.purefun.fstp.core.bo;

message TestBO2 {
    required string  uuid = 1;
    required sint64  boid = 2;
    required string  destination = 3;
    optional string  servername = 4;
    optional string  msg = 5;
}
