option java_outer_classname = "RDSStockBO_PRO";
option java_package = "com.purefun.fstp.core.bo.copy.pro";

message RDSStockBO {
    required string  uuid = 1;
    required sint64  boid = 2;
    required string  destination = 3;
    optional string  product_id = 4;
    optional string  isin = 5;
    optional string  recv_time = 6;
    optional string  secu_name_cn = 7;
    optional string  secu_name_en = 8;
    optional string  secu_base_id = 9;
    optional string  exch_type = 10;
    optional string  secu_type = 11;
    optional string  secu_sub_type = 12;
    optional string  currency = 13;
    optional double  bond_par_value = 14;
    optional string  last_trade_date = 15;
    optional string  list_date = 16;
    optional int32  buy_unit = 17;
    optional int32  sell_unit = 18;
    optional int32  trade_low_limit = 19;
    optional int32  trade_high_limit = 20;
    optional double  pre_close_price = 21;
    optional double  tick_price = 22;
    optional string  price_limit_type = 23;
    optional double  price_high_limit = 24;
    optional double  price_low_limit = 25;
    optional double  ex_right_ratio = 26;
    optional double  dividend_price = 27;
    optional string  financing_flag = 28;
    optional string  margin_flag = 29;
    optional string  secu_status = 30;
    optional string  memo = 31;
}
