option java_outer_classname = "TestBO_PRO";
option java_package = "com.purefun.fstp.core.bo.copy.pro";

message TestBO {
    required string  uuid = 1;
    required sint64  boid = 2;
    required string  destination = 3;
    optional string  servername = 4;
    optional string  msg = 5;
}
