syntax = "proto2";
package com.purefun.fstp.core.bo;

message QueryRequestBO {
    required string  uuid = 1;
    required sint64  boid = 2;
    required string  destination = 3;
    optional string  requestServiceName = 4;
    optional string  respondServiceName = 5;
    optional string  querytopic = 6;
    optional string  queryBoDestination = 7;
}
